# meta-agent

./: .env.example  .gitignore  BUILD_PLAN_v4.md  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: Dockerfile  config.py  db.py  main.py  models.py  pyproject.toml
backend/routers/: agents.py  chat.py  health.py  mistakes.py  proxy.py  tools.py
backend/services/: embeddings.py  mistakes.py  prompts.py  runtime.py  tools.py
backend/services/kb/: indexer.py  zendesk.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AgentEditor.jsx  AgentList.jsx  ChatWindow.jsx  MistakeDashboard.jsx  MistakeReport.jsx
